# NucPackGen

./: .gitignore  CMakeLists.txt  NUC976DK61Y.ini  README.md
src/: debug.h  nucpack.c  nucpack.h  nucpackgen.c
sys_cfg/: nuc970_DDR2_Winbond_512M.ini
